# MesKeyELF

./: .clang-format  CMakeLists.txt  README.md
core/header/: KeyCommon.h  showMenu.h  showScreen.h
core/src/: showHandler.cpp  showKeyConfigurator.cpp  showKeySender.cpp  showMenu.cpp  showScreen.cpp
include/header/: KeyCommon.h  showHandler.h  showKeyConfigurator.h  showKeySender.h
include/src/: KeyCommon.cpp  showHandler.cpp  showKeyConfigurator.cpp  showKeySender.cpp
src/: MesKeyELF.cpp
